# PoGo

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PoGo_rarity.py  README.md  TODO.md  app.py  config.example.json  corrected_rarity_top50.csv  intermediate_catch_rate.csv  intermediate_curated.csv  intermediate_merged.csv  intermediate_normalized.csv  intermediate_structured.csv  pokemon_rarity_analysis_enhanced.csv  pokemon_rarity_with_final.csv  pyproject.toml  rarity_scoring_pipeline.py  requirements.txt  scraper.py  weights.example.json
data/: curated_spawn_data.json  infer_missing_rarity_rules.json  pokemon_list.json  spawn_types.json
docs/: rca_selection_bug.md
pages/: 10_debug_selection.py
pogorarity/: __init__.py  adapters.py  aggregator.py  cli.py  config.py  health.py  helpers.py  models.py  normalizer.py  pokemon_rarity_analysis_enhanced.csv  reporting.py  scaling.py  scraper.py  thresholds.py
pogorarity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  rapid_toggle_e2e.py  test_adapters.py  test_aggregation.py  test_cache_ttl_effect.py  test_caught_editor.py  test_changelog_date.py  test_config.py  test_event_store.py  test_game_master.py  test_infer_missing_rarity.py  test_integration.py  test_models.py  test_parser.py  test_pipeline.py  test_pokeapi.py  test_pokemondb.py  test_process_save_caught.py  test_rarity_band.py  test_recommendations.py  test_safe_request.py  test_scaling.py  test_scraper.py  test_silph_road.py  test_slugify.py  test_stale_write_order.py  (+6 more)
(+16 files in other folders)
