[project]
name = "pogorarity"
version = "0.1.0"
dependencies = [
    "requests==2.32.5",
    "pandas==2.3.2",
    "beautifulsoup4==4.13.5",
    "pydantic==2.11.7",
]

[project.optional-dependencies]
dev = [
    "pip-tools==7.5.0",
    "pytest==8.4.2",
]

[project.scripts]
pokemon-rarity = "pogorarity.cli:main"

[tool.setuptools.packages.find]
include = ["pogorarity"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

